--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container" style="background-color: darkgray">
-        <h1>Celebrity Viewer</h1>
+        <h1>Actors Spotlight</h1>
         
         <select id="celebrityList" onchange="showCelebrity()">
             <option value="Tom Hanks">Tom Hanks</option>
